2009-10-09  Gabor Loki  <loki@inf.u-szeged.hu>

        Rubber-stamped by Eric Seidel.

        Add ARM JIT support for Gtk port (disabled by default)
        https://bugs.webkit.org/show_bug.cgi?id=30228

        * GNUmakefile.am:

2009-10-08  Geoffrey Garen  <ggaren@apple.com>

        Tiger build fix: added a few more variable initializations.

        * runtime/StringPrototype.cpp:
        (JSC::stringProtoFuncReplace):
        (JSC::stringProtoFuncSearch):

2009-10-08  Geoffrey Garen  <ggaren@apple.com>

        Qt build fix: added missing #include.

        * jsc.cpp:

2009-10-08  Geoffrey Garen  <ggaren@apple.com>

        Tiger build fix: initialize variable whose initialization the compiler
        can't otherwise figure out.

        * runtime/RegExpObject.cpp:
        (JSC::RegExpObject::match):

2009-10-08  Geoffrey Garen  <ggaren@apple.com>

        Windows build fix: updated exports.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore_debug.def:

2009-10-08  Geoffrey Garen  <ggaren@apple.com>

        Tiger build fix: fixed file name case.

        * JavaScriptCore.xcodeproj/project.pbxproj:

2009-10-08  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej Stachowiak.

        At long last, I pronounce the death of AllInOneFile.cpp.
        
        SunSpider reports a 1.01x speedup.

        * AllInOneFile.cpp: Removed.
        * GNUmakefile.am:
        * JavaScriptCore.exp:
        * JavaScriptCore.gypi:
        * JavaScriptCore.xcodeproj/project.pbxproj: Added missing project files
        to compilation stages.

        * parser/Grammar.y:
        * parser/Lexer.cpp:
        * parser/Lexer.h:
        (JSC::jscyylex):
        * runtime/ArrayConstructor.cpp:
        (JSC::constructArrayWithSizeQuirk):
        * runtime/Collector.h:
        * runtime/JSCell.cpp:
        (JSC::JSCell::operator new):
        * runtime/JSCell.h:
        (JSC::JSCell::operator new):