@@ -1,3 +1,10 @@
+2009-10-09  Mark Rowe  <mrowe@apple.com>
+
+        Attempt to fix the GTK release build.
+
+        * GNUmakefile.am: Include Grammar.cpp in release builds now that
+        AllInOneFile.cpp is gone.
+
 2009-10-09  Gabor Loki  <loki@inf.u-szeged.hu>
 
         Rubber-stamped by Eric Seidel.
